--- a/weather-app/src/assets/main.css
+++ b/weather-app/src/assets/main.css
@@ -1,35 +1,131 @@
 @import './base.css';
 
-#app {
-  max-width: 1280px;
+/* ============================= =================================
+Main Styles
+============================= ================================= */
+.router-link-active,
+.router-link-exact-active {
+  color: var(--lite);
+}
+.router-link-active::after,
+.router-link-exact-active::after {
+  width: 100%;
+  left: -2px;
+}
+header {
+  padding: 1em 0;
+  background-color: var(--gray-1);
+}
+.header__wrapper,
+.header__links,
+.brand {
+  display: flex;
+  align-items: center;
+}
+.header__wrapper {
+  justify-content: space-between;
+  font-size: var(--fz-md);
+}
+.header__links {
+  gap: 2em;
+  font-size: var(--fz-sm);
+  text-transform: uppercase;
+  letter-spacing: .4rem;
+}
+.header__links a {
+  display: inline-block;
+  padding: 0 .2em;
+}
+.brand {
+  gap: 1.5em;
+  color: black;
+}
+.brand span {
+  font-weight: 700;
+}
+.brand__logo {
+  max-width: 50px;
+}
+.search-form {
+  position: relative;
+  width: 100%;
+  max-width: 360px;
+  padding-top: 2em;
   margin: 0 auto;
-  padding: 2rem;
-
-  font-weight: normal;
+}
+.search-form input {
+  width: 100%;
+  height: 100%;
+  border: 1px solid lightgrey;
+  padding: .8em .5em;
+  outline: none;
+  border-radius: 10px;
+  font-size: var(--fz-md);
+  transition: all 0.3s;
+}
+.search-form input:active,
+.search-form input:focus {
+  border-color: var(--accent);
 }
 
-a,
-.green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
+.search-form__list {
+  background-color: #fff;
+  position: absolute;
+  width: 100%;
+  top: 4.5em;
+  font-size: var(--fz-sm);
+  list-style: none;
+  padding: 1em 0;
+  border: 1px solid lightgrey;
+  border-radius: 10px;
+  z-index: 1;
 }
-
-@media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
-  }
+.search-form__list li {
+  padding: 1em 2em;
+  transition: background-color 200ms ease-in-out;
 }
-
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
-  }
-
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
-  }
+.search-form__list li:hover {
+  cursor: pointer;
+  background-color: var(--accent);
+}
+.search-form__list li:focus {
+  background-color: var(--accent);
+  outline: none;
+}
+.weather-card__header,
+.weather-card__footer {
+  display: flex;
+  gap: 2em;
+  font-size: var(--fz-sm);
+}
+.main-section {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(12rem, 1fr));
+  grid-row: auto;
+  padding-top: 4em;
+}
+.weather-card {
+  width: 340px;
+  max-width: 350px;
+  padding: 2em;
+  border: 1px solid lightgrey;
+  border-radius: 10px;
+}
+.weather-card__footer {
+  justify-content: space-between;
+}
+.weather-card--details ul {
+  padding: 0;
+  list-style: none;
+}
+.weather-card--icon {
+  max-width: 130px;
+}
+.weather-card--icon img {
+  margin-left: 3em;
+  margin-top: -2em;
+}
+.weather-card--temp h3 {
+  font-size: 8rem;
+  font-weight: 700;
 }
