feat: Added logic for updating favorites cities and store them to local storage

--- a/weather-app/src/assets/main.css
+++ b/weather-app/src/assets/main.css
@@ -53,6 +53,26 @@ header {
   padding-top: 2em;
   margin: 0 auto;
 }
+.search-form__input {
+  display: flex;
+  gap: 1em;
+}
+.search-form__input button {
+  background-color: var(--accent);
+  border: none;
+  border-radius: 10px;
+  color: #fff;
+  padding: .5em 1em;
+  transition: all 300ms ease-in-out;
+}
+.search-form__input button:hover {
+    cursor: pointer;
+    opacity: .8;
+}
+.search-form__input button:focus,
+.search-form__input button:active {
+  border: 1px solid var(--gray-2);
+}
 .search-form input {
   width: 100%;
   height: 100%;
@@ -66,6 +86,9 @@ header {
 .search-form input:active,
 .search-form input:focus {
   border-color: var(--accent);
+}
+.search-form input:disabled {
+  opacity: .4;
 }
 
 .search-form__list {
@@ -92,6 +115,7 @@ header {
   background-color: var(--accent);
   outline: none;
 }
+.main-section,
 .weather-card__header,
 .weather-card__footer {
   display: flex;
@@ -99,12 +123,11 @@ header {
   font-size: var(--fz-sm);
 }
 .main-section {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(12rem, 1fr));
-  grid-row: auto;
+  flex-wrap: wrap;
   padding-top: 4em;
 }
 .weather-card {
+  gap: 1em;
   width: 340px;
   max-width: 350px;
   padding: 2em;
@@ -114,6 +137,9 @@ header {
 .weather-card__footer {
   justify-content: space-between;
 }
+.weather-card--details {
+  padding-bottom: 4em;
+}
 .weather-card--details ul {
   padding: 0;
   list-style: none;
@@ -122,10 +148,102 @@ header {
   max-width: 130px;
 }
 .weather-card--icon img {
-  margin-left: 3em;
+  margin-left: 2em;
   margin-top: -2em;
 }
 .weather-card--temp h3 {
-  font-size: 8rem;
+  font-size: 7rem;
   font-weight: 700;
+}.weather-card__actions {
+  width: 90%;
+  display: flex;
+  bottom: 1em;
+  right: 1em;
+  justify-content: space-between;
+  gap: 0.5em;
+  position: absolute;
+}
+.graph-btn {
+  display: flex;
+  align-items: center;
+  gap: .5em;
+}
+.btn {
+  background: none;
+  padding: .5em .7em;
+  border: none;
+  border-radius: 50%;
+}
+.btn i {
+  transition: color 200ms ease-in-out;
+}
+.btn:hover {
+  cursor: pointer;
+}
+.btn:hover i {
+  color: var(--gray-1);
+}
+.active {
+  color: var(--accent);
+}
+.modal {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 9999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.modal-overlay {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: var(--accent);
+  opacity: .4;
+}
+.modal-content {
+  width: 700px;
+  min-width: 360px;
+  font-size: var(--fz-md);
+  position: relative;
+  z-index: 1;
+  background-color: #fff;
+  padding: 2em;
+  border-radius: 10px;
+}
+.modal-content p {
+  margin-bottom: 2em;
+}
+.modal-actions {
+  display: flex;
+  justify-content: flex-end;
+  gap: 1em;
+}
+.modal-btn {
+  padding: 1em 2em;
+  background-color: var(--accent);
+  color: #fff;
+  font-size: var(--fz-sm);
+  border: none;
+  border-radius: 10px;
+  transition: all 300ms ease-in-out;
+}
+.modal-btn:hover {
+  cursor: pointer;
+  opacity: .8;
+}
+.modal-btn:focus,
+.modal-btn:active {
+  border: 1px solid var(--gray-2);
+}
+.delete-btn {
+  display: flex;
+  align-items: center;
+  gap: 0.3em;
+  background-color: var(--gray-1);
 }
